// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders menu in opened state when user is logged in 1`] = `
<div>
  <div
    className="menu-overlay"
    onClick={[Function]}
  />
  <div
    className="menu-button"
    onClick={[Function]}
  >
    <span
      className="bar"
    />
    <span
      className="bar"
    />
    <span
      className="bar"
    />
  </div>
  <div
    className="Menu"
  >
    <a
      className="Menu-item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="Menu-item"
      onClick={[Function]}
    >
      Logout
    </a>
    <p
      className="fullName"
    >
      Logged in as 
      fullName
    </p>
  </div>
</div>
`;

exports[`Menu renders menu in opened state when user is not logged in 1`] = `
<div>
  <div
    className="menu-overlay"
    onClick={[Function]}
  />
  <div
    className="menu-button"
    onClick={[Function]}
  >
    <span
      className="bar"
    />
    <span
      className="bar"
    />
    <span
      className="bar"
    />
  </div>
  <div
    className="Menu"
  >
    <a
      className="Menu-item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="Menu-item"
      href="login"
      onClick={[Function]}
    >
      Login
    </a>
    
  </div>
</div>
`;

exports[`Menu renders menu in unopened state when user is logged in 1`] = `
<div>
  <div
    className="menu-overlay"
    onClick={[Function]}
  />
  <div
    className="menu-button"
    onClick={[Function]}
  >
    <span
      className="bar"
    />
    <span
      className="bar"
    />
    <span
      className="bar"
    />
  </div>
  <div
    className="Menu"
  >
    <a
      className="Menu-item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="Menu-item"
      onClick={[Function]}
    >
      Logout
    </a>
    <p
      className="fullName"
    >
      Logged in as 
      fullName
    </p>
  </div>
</div>
`;

exports[`Menu renders menu in unopened state when user is not logged in (connected) 1`] = `
<div>
  <div
    className="menu-overlay"
    onClick={[Function]}
  />
  <div
    className="menu-button"
    onClick={[Function]}
  >
    <span
      className="bar"
    />
    <span
      className="bar"
    />
    <span
      className="bar"
    />
  </div>
  <div
    className="Menu"
  >
    <a
      className="Menu-item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="Menu-item"
      href="login"
      onClick={[Function]}
    >
      Login
    </a>
    
  </div>
</div>
`;

exports[`Menu renders menu in unopened state when user is not logged in 1`] = `
<div>
  <div
    className="menu-overlay"
    onClick={[Function]}
  />
  <div
    className="menu-button"
    onClick={[Function]}
  >
    <span
      className="bar"
    />
    <span
      className="bar"
    />
    <span
      className="bar"
    />
  </div>
  <div
    className="Menu"
  >
    <a
      className="Menu-item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="Menu-item"
      href="login"
      onClick={[Function]}
    >
      Login
    </a>
    
  </div>
</div>
`;
